src/app/custom.css
/* ... */
/************************************/
/***        16. Footer css        ***/
/************************************/

.main-footer{
	background: var(--primary-color) url('/images/footer-bg.svg') no-repeat;
	background-position: top center;
	background-size: 100% auto;
	padding: 70px 0 25px;
	margin-bottom: 50px;
}

.about-footer{
	padding-right: 40px;
}

.about-footer .footer-logo{
	margin-bottom: 30px;
}

.about-footer .about-footer-content p{
	color: var(--white-color);
	margin: 0;
}

.footer-links{
	margin-left: 70px;
}

.footer-links h3,
.footer-newsletter h3{
	color: var(--white-color);
	font-size: 20px;
	font-weight: 600;
	text-transform: capitalize;
	margin-bottom: 25px;
}

.footer-links ul{
	list-style: none;
	padding: 0;
	margin: 0;
}

.footer-links ul li{
	margin-bottom: 10px;
}

.footer-links ul li:last-child{
	margin-bottom: 0;
}

.footer-links ul li a{
	color: var(--white-color);
	text-transform: capitalize;
	transition: all 0.3s ease-in-out;
}

.footer-links ul li:hover a,
.footer-links ul li:hover .footer-text-button{
	color: var(--accent-color);
}

.footer-text-button{
	background: transparent;
	border: 0;
	color: var(--white-color);
	cursor: default;
	font: inherit;
	padding: 0;
	text-align: left;
	text-transform: capitalize;
	transition: all 0.3s ease-in-out;
}

.footer-newsletter-form .form-group{
	width: 100%;
	display: flex;
	position: relative;
}

.footer-newsletter-form .form-group .form-control{
	width: 100%;
	padding: 14px 20px;
	background: var(--dark-divider-color);
	color: var(--white-color);
	border: none;
	border-radius: 100px;
	box-shadow: none;
}

.footer-newsletter-form .form-group .form-control::placeholder{
	color: var(--white-color);
}

.footer-newsletter-form .form-group .section-icon-btn{
	content: '';
    position: absolute;
    top: 50%;
    right: 4px;
    transform: translateY(-50%);
    width: 38px;
    height: 38px;
	border: none;
	padding: 0;
}

.footer-newsletter-form .section-icon-btn:hover{
	background-color: var(--primary-color);
    transform: translateY(-50%);
}

.footer-newsletter-form .section-icon-btn:hover img{
	transform:rotate(45deg);
}

.footer-copyright{
    border-top: 1px solid var(--dark-divider-color);
    padding: 25px 0;
    margin-top: 50px;
}

.footer-copyright .footer-copyright-text p{
	color: var(--white-color);
	margin: 0;
}

.footer-copyright .footer-social-links ul{
	list-style: none;
	margin: 0;
	padding: 0;
	text-align: end;
}

.footer-copyright .footer-social-links ul li{
	display: inline-block;
	margin-right: 10px;
}

.footer-copyright .footer-social-links ul li:last-child{
	margin-right: 0;
}

.footer-copyright .footer-social-links ul li a{
	background-color: transparent;
	color: var(--white-color);
	border: 2px solid var(--white-color);
    height: 36px;
    width: 36px;
    border-radius: 100%;
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: all 0.3s ease-in-out;
}

.footer-copyright .footer-social-links ul li a i{
	font-size: 16px;
}

.footer-copyright .footer-social-links ul li a:hover{
	border-color: var(--accent-color);
	color: var(--accent-color);
}

/************************************/
/***    17. About us Page css	  ***/
/************************************/

.page-header{
	position: relative;
	background: url('/images/page-header-bg.jpg') no-repeat center center;
	background-size: cover;
	border-radius: 46px;
	overflow: hidden;
	padding: 140px 0;
}

.page-header > .container{
	position: relative;
	z-index: 2;
}

.page-header:before{
	content: '';
	display: block;
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background: var(--primary-color);
	opacity: 40%;
	z-index: 1;
}

.page-header-box{
	position: relative;
	text-align: center;
	z-index: 1;
}

.page-header-box h1{
	font-size: 74px;
    font-weight: 700;
	color: var(--white-color);
	margin-bottom: 20px;
}

.page-header-box ol{
	margin: 0;
	padding: 0;
	justify-content: center;
}

.page-header-box ol li.breadcrumb-item{
	font-size: 20px;
	font-weight: 500;
	text-transform: capitalize;
	color: var(--white-color);
}

.page-header-box ol li.breadcrumb-item a{
    color: inherit;
}

.page-header-box ol li.breadcrumb-item.active{
	color: var(--accent-color);
}

.page-header-box ol .breadcrumb-item+.breadcrumb-item::before{
    color: var(--white-color);
}

.about-us.page-about-us{
	padding: 100px 0;
}

.about-us.page-about-us .about-content-body{
    margin-bottom: 0px;
}

.exclusive-partners{
	background: var(--secondary-color) url('/images/asterisk-icon-bg.svg') no-repeat;
	background-position: bottom left;
	background-size: auto;
	padding: 100px 0 70px;
}

.partners-logo{
	background-color: var(--white-color);
	border-radius: 20px;
	text-align: center;
	padding: 30px 50px;
	margin-bottom: 30px;
}

.partners-logo img{
	width: 190px;
	margin: 0 auto;
}

.vision-mission{
	padding: 100px 0;
}

.vision-mission .section-title{
	max-width: 780px;
}

.our-projects-nav{
	margin-bottom: 50px;
	text-align: center;
}

.our-projects-nav .nav-tabs{
	padding: 0;
	margin: 0;
	list-style: none;
	display: inline-flex;
	background-color: var(--secondary-color);
	border-radius: 100px;
	border: none;
	padding: 15px;
}

.our-projects-nav ul li{
	margin-right: 25px;
}

.our-projects-nav ul li:last-child{
	margin-right: 0;
}

.our-projects-nav ul li .nav-link{
	background-color: var(--white-color);
	color: var(--primary-color);
	border-radius: 100px;
	font-family: var(--accent-font);
	font-size: 16px;
	font-weight: 700;
	line-height: 1.1em;
	text-transform: capitalize;
	border: none;
	padding: 15px 30px;
	transition: all 0.4s ease-in-out;
}

.our-projects-nav ul li .nav-link:hover{
	border: none;
}

.our-projects-nav ul li .nav-link.active{
	background-color: var(--accent-color);
	color: var(--white-color);
	border: none;
}

.vision-mission-list ul{
	list-style: none;
	padding: 0;
	margin: 0;
}
/* ... */

